--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,8 +49,7 @@ jobs:
 
     - name: Clone device tree
       run: |
-        mkdir -p ./device/lenovo
-        ln -s /home/runner/work/twrp_lenovo_jd2019/twrp_lenovo_jd2019 ./device/lenovo/jd2019
+        git clone --depth=1 https://github.com/jzinferno/twrp_lenovo_jd2019.git ./device/lenovo/jd2019
       working-directory: /home/runner/work/workspace
 
     - name: Set Swap Space
